# fmm

./: .gitignore  README.md  flake.nix  fmm.cabal
.github/workflows/: cache.yml
app/: Fmm.hs  Main.hs
app/Fmm/: Config.hs  Downloader.hs  Instances.hs  Launcher.hs  Modpacks.hs  Mods.hs  Types.hs  UI.hs
app/Fmm/UI/: Edit.hs  Launcher.hs  Modpacks.hs  Mods.hs
assets/press-kit/: press_kit.html
