cabal-version:      3.0
name:               fmm
version:            0.1.1
synopsis:           GTK Factorio Mod Manager and launcher
homepage:           https://github.com/ProggerX/fmm
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
category:           Game
build-type:         Simple

common warnings
    ghc-options: -Wall -threaded

executable fmm
    import:           warnings
    main-is:          Main.hs
    other-modules:    Fmm,
                      Fmm.Config,
                      Fmm.Downloader,
                      Fmm.Types,
                      Fmm.Launcher,
                      Fmm.Instances,
                      Fmm.Mods,
                      Fmm.UI,
                      Fmm.UI.Edit,

    build-depends:    base >= 4.19,
                      process,
                      aeson,
                      gi-gtk4,
                      gi-gdk4,
                      wreq,
                      lens,
                      lens-aeson,
                      directory,
                      filepath,
                      gi-adwaita,
                      gi-gio,
                      gi-gobject,
                      gi-glib,
                      text,
                      file-embed,
                      bytestring,
                      zip-archive,
                      tar,
                      regex-tdfa,
    hs-source-dirs:   app
    default-language: GHC2021
